# helix

./: .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  RELEASE-NOTES-1.0.md  SECURITY.md  helix.def  helix.exp  helix.h  helix.ld  mkdocs.yml
.github/workflows/: abi-check.yml  ci.yml  release.yml
benchmarks/: REPORT-1.0.0.csv  REPORT-1.0.0.md
cmake/: helix-config.cmake.in  helix.pc.in
debian/: changelog  control  copyright  helix-tools.install  libhelix-dev.install  libhelix1.install  rules
docs/: USER_GUIDE.md  abi-policy.md  api-reference.md  benchmarks.md  ci-build-setup.md  index.md  install.md  llama-cpp-update-guide.md
docs/migration/: 0.8-to-1.0.md
docs/wrappers/: index.md
packaging/: helix.nuspec  helix.rb
packaging/chocolatey/tools/: chocolateyInstall.ps1  chocolateyUninstall.ps1
src/abi/: helix_abi.cpp
src/chat/: reasoning.cpp  reasoning.hpp  template.cpp  template.hpp
src/engine/: decode_loop.cpp  decode_loop.hpp  embed_loop.cpp  embed_loop.hpp  embed_packing.hpp  event_sink.hpp  lcp.hpp  logprobs.cpp  logprobs.hpp  stop_strings.hpp  utf8.hpp  warmup.cpp  warmup.hpp
src/grammar/: response_format.cpp  response_format.hpp
src/hardware/: accel_cuda.cpp  accelerators.cpp  cpu.hpp  cpu_linux.cpp  cpu_windows.cpp  gpu_layer_select.cpp  gpu_layer_select.hpp  hardware.cpp  isa.cpp  mem_bw_table.cpp  profile.cpp  profile.hpp  ram.cpp
src/internal/: error.cpp  error.hpp  log.cpp  log.hpp  version.hpp
src/json/: request.cpp  request.hpp  response.cpp  response.hpp
src/model/: cuda_lock.cpp  cuda_lock.hpp  model.cpp  model.hpp
src/multimodal/: image_decode.cpp  image_decode.hpp  mmproj.cpp  mmproj.hpp
src/runtime/: runtime.cpp  runtime.hpp
src/sampling/: chain.cpp  chain.hpp  logit_bias.cpp  logit_bias.hpp
src/session/: options.cpp  session.cpp  session.hpp  state.cpp
src/util/: strings.hpp
tests/: CMakeLists.txt
tests/integration/: integration_test.cpp
tests/unit/: accelerator_probe_test.cpp  conflict_validation_test.cpp  content_part_parse_test.cpp  cuda_lock_test.cpp  data_uri_test.cpp  embed_packing_test.cpp  embeddings_request_test.cpp  error_envelope_test.cpp  event_sink_test.cpp  gpu_layer_select_test.cpp  hardware_probe_test.cpp  hardware_selector_test.cpp  helix_test_main.cpp  lcp_test.cpp  logit_bias_test.cpp  logprobs_format_test.cpp  reasoning_extract_test.cpp  request_parse_test.cpp  rerank_request_test.cpp  response_format_test.cpp  response_serialize_test.cpp  sampler_chain_test.cpp  speculative_options_test.cpp  stop_strings_test.cpp  tools_request_test.cpp  tools_response_test.cpp  utf8_prefix_test.cpp
tests/wrapper-conformance/: cases.yaml  run.py
tools/helix-doctor/: CMakeLists.txt  c_abi_check.c  main.cpp
tools/helix-shim-server/: CMakeLists.txt  main.cpp
wrappers/: .gitignore
wrappers/dotnet/src/Helix/: Helix.csproj  HelixErrors.cs  HelixModel.cs  HelixRuntime.cs  HelixSession.cs  Native.cs  Types.cs
wrappers/dotnet/tests/Helix.Tests/: Helix.Tests.csproj  TypeTests.cs
wrappers/go/: go.mod  helix.go  helix_test.go
wrappers/node/: binding.gyp  package-lock.json  package.json  tsconfig.json
wrappers/node/src/: binding.cc  compat-util.ts  error-types.ts  index.ts  openai-compat.ts  types.ts
wrappers/node/tests/: types.test.ts
wrappers/python/: pyproject.toml
wrappers/python/src/helix/: __init__.py  _api.py  _ffi.py  openai_compat.py
wrappers/python/tests/: test_ffi_types.py  test_integration.py
wrappers/rust/: Cargo.toml
wrappers/rust/helix/: Cargo.toml
wrappers/rust/helix-sys/: Cargo.toml  build.rs
wrappers/rust/helix-sys/src/: lib.rs
wrappers/rust/helix/src/: error.rs  ffi_util.rs  lib.rs  stream.rs  types.rs
wrappers/rust/helix/tests/: unit.rs
wrappers/swift/: Package.swift
wrappers/swift/Sources/CHelix/: helix.h  module.modulemap
wrappers/swift/Sources/Helix/: HelixError.swift  HelixRuntime.swift  Types.swift
wrappers/swift/Tests/HelixTests/: TypeTests.swift
